--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A npm package that exports functions to mask values",
   "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel ./src -d ./lib"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/miles-yan/masks-js/issues"
   },
-  "homepage": "https://github.com/miles-yan/masks-js#readme"
+  "homepage": "https://github.com/miles-yan/masks-js#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
+  }
 }
